Add:1ページ5件取得できるようにserver.js修正

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -14,34 +14,52 @@
     <h1><a href="/blog/">担当者Aのブログ</a></h1>
 
     <article>
-      <% entries.forEach((entry) => { %>
-      <div class="entry">
-        <h2><a href="/blog/<%= entry.date %>"><%= entry.title %></a></h2>
-        <div class="entry-content">
-          <div class="entry-date"><%=
-            entry.date.substr(0, 4) + '-' +
-            entry.date.substr(4, 2) + '-' +
-            entry.date.substr(6, 2)
-          %></div>
-          <p><%= entry.content %><a class="entry-more" href="/blog/<%= entry.date %>">続きを読む</a></p>
+      <% entries.forEach((entry)=> { %>
+        <div class="entry">
+          <h2><a href="/blog/<%= entry.date %>">
+              <%= entry.title %>
+            </a></h2>
+          <div class="entry-content">
+            <div class="entry-date">
+              <%= entry.date.substr(0, 4) + '-' + entry.date.substr(4, 2) + '-' + entry.date.substr(6, 2) %>
+            </div>
+            <p>
+              <%= entry.content %><a class="entry-more" href="/blog/<%= entry.date %>">続きを読む</a>
+            </p>
+          </div>
         </div>
-      </div>
-      <% }) %>
+        <% }) %>
     </article>
+    <div class="page-links">
+      <div>
+        <% if (currentPage> 1) { %>
+          <a href="?page=<%= currentPage - 1 %>">前のページへ</a>
+          <% } %>
+      </div>
+      <div>
+        <% if (currentPage < lastPage) { %>
+          <a href="?page=<%= currentPage + 1 %>">次のページへ</a>
+          <% } %>
+      </div>
+    </div>
   </div>
 
   <!-- サイドバー -->
   <div class="side-bar">
     <div>
-      <% sideList.forEach((listData) => { %>
-      <% const [yyyymm, listEntries] = listData; %>
-      <h3><%= yyyymm %></h3>
-      <ul>
-        <% listEntries.forEach((entry) => { %>
-        <li><a href="/blog/<%= entry.date %>"><%= entry.title %></a></li>
-        <% }) %>
-      </ul>
-      <% }) %>
+      <% sideList.forEach((listData)=> { %>
+        <% const [yyyymm, listEntries]=listData; %>
+          <h3>
+            <%= yyyymm %>
+          </h3>
+          <ul>
+            <% listEntries.forEach((entry)=> { %>
+              <li><a href="/blog/<%= entry.date %>">
+                  <%= entry.title %>
+                </a></li>
+              <% }) %>
+          </ul>
+          <% }) %>
     </div>
   </div>
 </body>
