--- a/public/blog.css
+++ b/public/blog.css
@@ -86,6 +86,12 @@ h1 a {
   color: #f44;
 }
 
+/* 前のページ/次のページリンク */
+.page-links {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* サイドバー */
 .side-bar {
   position: fixed;
