--- a/public/blog.css
+++ b/public/blog.css
@@ -1,18 +1,4 @@
-/* 共通設定 */
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-  font-size: 1.5rem;
-}
+@import 'common.css';
 
 /* メインコンテンツ */
 .main-content {
