送信した記事がファイルとして保存できるよして保存できるように修正

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,7 @@
 
   <section>
     <h2>記事の新規投稿</h2>
-    <form name="edit" action="/admin/post_entry">
+    <form name="edit" action="/admin/post_entry" method="post">
       <div>
         <h3>タイトル</h3>
         <input type="text" name="title">
