--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -21,7 +21,7 @@
             </a></h2>
           <div class="entry-content">
             <div class="entry-date">
-              <%= entry.date.substr(0, 4) + '-' + entry.date.substr(4, 2) + '-' + entry.date.substr(6, 2) %>
+              <%= convertDateFormat(entry.date) %>
             </div>
             <p>
               <%= entry.content %><a class="entry-more" href="/blog/<%= entry.date %>">続きを読む</a>
