画像アップロード機能実装

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,10 +16,24 @@
     <h2>
       <%= pageTitle %>
     </h2>
-    <form name="edit" action="/admin/post_entry" method="post">
+    <form name="edit" action="/admin/post_entry" method="post" enctype="multipart/form-data">
       <div>
         <h3>タイトル</h3>
         <input type="text" name="title" value="<%= entry.title %>">
+      </div>
+      <div>
+        <h3>画像</h3>
+        <% if (entry.image) { %>
+          <div>
+            <label class="checkbox-label">
+              <input type="checkbox" name="imgdel" value="1">
+              <span>この画像を削除する</span>
+            </label>
+          </div>
+          <img class="image" src="/images/<%= entry.date %>/<%= entry.image %>">
+          <h4>別の画像に差し替える</h4>
+          <% } %>
+            <input type="file" name="image" accept="image/*">
       </div>
       <div>
         <h3>本文</h3>
