--- a/public/admin.css
+++ b/public/admin.css
@@ -53,6 +53,21 @@ form[name=edit] textarea[name=content] {
   height: 250px;
 }
 
+ /* ブログ記事投稿ページで表示する投稿画像 */
+ form[name=edit] .image {
+  max-width: 100%;
+  height: auto;
+}
+/* ブログ記事投稿ページの投稿画像削除チェックボックス */
+.checkbox-label {
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.checkbox-label > span {
+  line-height: 1;
+}
+
 /* ブログ記事投稿フォームのボタンや戻るリンクの行 */
 form[name=edit] .form-buttons {
   display: flex;
