--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -23,9 +23,15 @@
             <div class="entry-date">
               <%= convertDateFormat(entry.date) %>
             </div>
-            <p>
-              <%= entry.content %><a class="entry-more" href="/blog/<%= entry.date %>">続きを読む</a>
-            </p>
+
+            <div class="entry-body">
+              <% if (entry.image) { %>
+                <img class="thumbnail" src="/images/<%= entry.date %>/<%= entry.image %>">
+                <% } %>
+                  <p>
+                    <%= entry.content %><a class="entry-more" href="/blog/<%= entry.date %>">続きを読む</a>
+                  </p>
+            </div>
           </div>
         </div>
         <% }) %>
