--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -26,6 +26,9 @@
           </div>
           <p>
             <%= entry.content %>
+              <% if (entry.image) { %>
+                <img class="image" src="/images/<%= entry.date %>/<%= entry.image %>">
+                <% } %>
           </p>
         </div>
       </div>
